# Analysis-system-of-audio-conversations

./: .gitignore  Jenkinsfile  README.md  d  db.sql  package-lock.json  package.json  server.js
audio_processing/: Dockerfile  README.md  config.py  logging_config.py  main.py  requirements.txt  worker_manager.py
audio_processing/config/: settings.py
audio_processing/monitor/: folder_watcher.py
audio_processing/src/api/: main.py
audio_processing/src/core/: exceptions.py
audio_processing/src/monitoring/: metrics.py  watcher.py
audio_processing/src/services/: api_client.py  file_manager.py  task_pool.py  (+1 more)
audio_processing/workers/: transcription_worker.py
audio_processing2/: Dockerfile  README.md  pyproject.toml  requirements.txt
audio_processing2/config/: logging_config.py  settings.py
audio_processing2/src/core/: application.py
audio_processing2/src/monitoring/: watcher.py
audio_processing2/src/services/: api_client.py  file_manager.py  task_pool.py  transcription_service.py
audio_processing2/storage/json_output/: 2024-05-26T20_10_55.217Z.json  2024-05-26T20_12_54.203Z.json  2024-05-26T20_25_52.929Z.json  2024-05-26T20_52_47.209Z.json
backend/: auth.py  database.py  main.py  models.py  requirements.txt  stats.py
public/: index.html
src/: App.js  ConversationPage.js  examples.json  index.css
src/components/: ConversationPage.js  MessageItem.js  MessageList.js  StatsPanel.js  TabPanel.js  styles.js  theme.js  utils.js
ui/: Dockerfile  package-lock.json  package.json  server.js
ui/src/: App.js  examples.json  index.js  sta.json
(+12 files in other folders)
